--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs-extra": "^11.2.0",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.9.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
-  }
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5"
+  },
+  "devDependencies": {}
 }
